# PackageKit

./: meson.build  meson_options.txt
backends/xbps/: meson.build  pk-backend-xbps.c  query.c  transaction.c
